# rc-tasks

./: README.md  pyproject.toml
.github/workflows/: codacy.yml
src/: get_tasks.py  main.py
