[tool.poetry]
name = "rc-tasks"
version = "1.0.2"
license = "GPL-3.0-only"
description = "A tool to fetch a language's missing tasks from Rosetta Code"
homepage = "https://github.com/RickBarretto/rc-tasks"
repository = "https://github.com/RickBarretto/rc-tasks"
authors = ["RickBarretto <78623871+RickBarretto@users.noreply.github.com>"]
readme = "README.md"
keywords = ["tool", "tasks", "Rosetta Code"]

packages = [
    { include = "src" }
]

[tool.poetry.scripts]
rc-tasks = "src.main:run"

[tool.poetry.dependencies]
python = "^3.10"
requests-html = "^0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
